--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "card-form",
   "version": "1.0.0",
-  "description": "Credit card form | React",
+  "description": "Credit card form | TS | React",
   "engines": {
     "npm": ">=5",
     "node": ">=8.15.1"
@@ -36,6 +36,7 @@
     "compression-webpack-plugin": "3.0.0",
     "css-loader": "3.2.0",
     "eslint": "6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-typescript": "5.1.0",
     "eslint-config-prettier": "6.4.0",
     "eslint-import-resolver-webpack": "0.11.1",
