--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "IE 10"
   ],
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "sanitize.css": "11.0.0",
@@ -34,6 +35,7 @@
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
     "@babel/preset-typescript": "7.6.0",
+    "@types/prop-types": "^15.7.3",
     "@types/react": "16.9.10",
     "@types/react-dom": "16.9.2",
     "@types/styled-components": "4.1.19",
