--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "compression-webpack-plugin": "3.0.0",
     "css-loader": "3.2.0",
     "eslint": "6.5.1",
+    "eslint-config-airbnb-typescript": "^6.0.0",
     "eslint-config-prettier": "6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.2.0",
