--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.8.0",
+    "svg-sprite-loader": "^4.1.6",
+    "svgo": "^1.3.1",
+    "svgo-loader": "^2.2.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "typescript": "3.6.4",
     "webpack": "4.41.2",
