--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-input-mask": "^2.0.4",
     "sanitize.css": "11.0.0",
     "styled-components": "4.4.1"
   },
@@ -47,6 +48,7 @@
     "@types/prop-types": "^15.7.3",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-input-mask": "^2.0.4",
     "@types/styled-components": "4.1.21",
     "@types/webpack-env": "1.14.1",
     "@typescript-eslint/eslint-plugin": "2.6.1",
